# KORustGameServer

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.game  Dockerfile.login  Dockerfile.unified  LICENSE  README.md  docker-compose.unified.yml  docker-compose.yml  plan.md
Map/: 1098elmo2004.smd  1098freezone_a.smd  1098freezone_b.smd  1098freezone_c.smd  1098moradon_0826-Orijinal.smd  1098war_a.smd  2003_karus_oldtime.smd  BattleZone.smd  BattleZone_f.smd  In_dungeon01.smd  In_dungeon02.smd  In_dungeon03.smd  Msoft_Moradon_war.smd  OLD1098moradon_0826.smd  battlezone_b.smd  dungeon_defense.smd  dungeon_defense74.smd  eko.smd  elmo2004.smd  elmo2004_2.smd  elmo2004_3.smd  elmo_oldtime_2003.smd  freezone_b.smd  freezone_b123.smd  freezone_c.smd  karus2004.smd  karus2004_2.smd  karus2004_3.smd  kobawar.smd  moradon_0826.smd  new_runawar.smd
Quests/: 01_main.lua  10305_Move.lua  11051_Sphie.lua  11510_Forkwain.lua  11610_charel.lua  11810_Helena.lua  13009_Kuger.lua  13010_Move.lua  13013_Patric.lua  13015_Iris.lua  13018_Chad.lua  14201_Skaky.lua  14201_SkakySPELLI.lua  14202_Clarence.lua  14202_ClarenceSPELLI.lua  14203_Dreak.lua  14203_DreakSPELLI.lua  14204_Minerva.lua  14204_MinervaSPELLI.lua  14301_Hapa.lua  14406_Guardsman.lua  14407_councilor.lua  14408_spy.lua  14410_Chef.lua  14410_Cooker.lua  14411_Gatekeper.lua  14412_Eslantw.lua  14413_Farmer.lua  14417_mortify01.lua  14418_mortify02.lua  14419_mortify03.lua  14420_mortify04.lua  14421_mortify05.lua  14422_mortify06.lua  14423_mortify07.lua  14424_dela.lua  14425_Raek.lua  14426_Dela.lua  14427_Jalk.lua  14430_Teils.lua  (+788 more)
crates/ko-db/: Cargo.toml
crates/ko-db/src/: lib.rs
crates/ko-db/src/models/: account.rs  achieve.rs  anti_afk_list.rs  banish_of_winner.rs  beginner_settings.rs  bot_system.rs  burning_features.rs  cash_shop.rs  chaos_stone.rs  char_creation.rs  character.rs  character_seal.rs  check_account.rs  cinderella.rs  clan_warehouse.rs  client_version.rs  coefficient.rs  collection_race.rs  costume.rs  daily_quest.rs  daily_rank.rs  daily_reward.rs  draki_tower.rs  dungeon_defence.rs  enchant.rs  event_beef_play_timer.rs  event_schedule.rs  forgotten_temple.rs  friend.rs  game_event.rs  game_master_settings.rs  game_options.rs  guild_bank.rs  hermetic_seal.rs  item.rs  item_tables.rs  item_upgrade_ext.rs  jackpot.rs  king.rs  king_nomination_result.rs  (+43 more)
crates/ko-db/src/repositories/: account.rs  achieve.rs  anti_afk.rs  audit_log.rs  banish.rs  bot_system.rs  burning.rs  cash_shop.rs  chaos_stone.rs  char_creation.rs  character.rs  character_seal.rs  check_account.rs  cinderella.rs  clan_warehouse.rs  client_version.rs  coefficient.rs  collection_race.rs  costume.rs  daily_quest.rs  daily_rank.rs  daily_reward.rs  draki_tower.rs  dungeon_defence.rs  enchant.rs  event_beef_timer.rs  event_schedule.rs  forgotten_temple.rs  friend.rs  game_options.rs  gm_settings.rs  guild_bank.rs  hermetic_seal.rs  item.rs  item_tables.rs  item_upgrade_ext.rs  jackpot.rs  king.rs  knights.rs  knights_cape.rs  (+33 more)
crates/ko-game/: Cargo.toml
crates/ko-game-server/: Cargo.toml
crates/ko-game-server/src/: main.rs
crates/ko-game/src/: attack_constants.rs  buff_constants.rs  clan_constants.rs  inventory_constants.rs  lib.rs  login_server.rs  login_session.rs  magic_constants.rs  npc.rs  npc_type_constants.rs  object_event_constants.rs  packet_io.rs  race_constants.rs  rate_limiter.rs  server.rs  session.rs  state_change_constants.rs  writer.rs  zone.rs
crates/ko-game/src/handler/: ability.rs  achieve.rs  achievement2.rs  allchar.rs  arena.rs  attack.rs  attendance.rs  audit_log.rs  awakening.rs  bifrost.rs  bundle_open.rs  cape.rs  captcha.rs  challenge.rs  change_hair.rs  chaos_stone.rs  character_seal.rs  chat.rs  cinderella.rs  clan_battle.rs  clan_nts.rs  clan_premium.rs  clan_warehouse.rs  clanpoints_battle.rs  class_change.rs  client_event.rs  collection.rs  collection_race.rs  concurrent_user.rs  continuous_packet.rs  corpse.rs  costume.rs  cryption.rs  daily_quest.rs  daily_quest_v2525.rs  daily_rank.rs  datasave.rs  dead.rs  delchar.rs  draki_tower.rs  (+114 more)
crates/ko-game/src/login_handler/: cryption.rs  download_info.rs  login.rs  mod.rs  news.rs  ping.rs  server_list.rs  version.rs
crates/ko-game/src/lua_engine/: bindings.rs  mod.rs
crates/ko-game/src/systems/: auto_harvest.rs  bdw.rs  bot_ai.rs  bot_waypoints.rs  buff_tick.rs  chaos.rs  chaos_stone_tick.rs  character_save.rs  concurrent_update.rs  daily_reset.rs  dot_tick.rs  event_room.rs  event_system.rs  expiry_tick.rs  flash.rs  heartbeat_probe.rs  juraid.rs  knights_save.rs  loyalty.rs  mod.rs  monster_stone.rs  npc_ai.rs  offline_merchant.rs  pathfind.rs  pet_attack_tick.rs  pet_tick.rs  regen.rs  sp_regen.rs  time_weather.rs  timed_notice.rs  war.rs  zone_rewards.rs
crates/ko-game/src/world/: combat.rs  inventory.rs  loading.rs  mod.rs  mod_tests.rs  npc.rs  session.rs  social.rs  tables.rs  trade.rs  types.rs  zone.rs
crates/ko-protocol/: Cargo.toml
crates/ko-protocol/src/: aes_crypt.rs  crypto.rs  gameguard.rs  lib.rs  opcode.rs  packet.rs  smd.rs
crates/ko-quest-audit/: Cargo.toml
crates/ko-quest-audit/src/: audit.rs  lib.rs  lua_parser.rs  main.rs  quest_map.rs  tbl_loader.rs
crates/ko-quest-gen/: Cargo.toml
crates/ko-quest-gen/src/: analyzer.rs  generator.rs  main.rs  mssql_parser.rs
crates/ko-server/: Cargo.toml
crates/ko-server/src/: main.rs
crates/ko-tbl-import/: Cargo.toml
crates/ko-tbl-import/src/: decrypt.rs  lib.rs  main.rs  parser.rs
tools/: README.md  (+9 more)
(+251 files in other folders)
